<resources>
    <string name="app_name">SignInDemo</string>

    <string name="no_result">对不起，没有搜索到相关数据！</string>


    <string name="remember_pass">记住密码</string>
    <string name="forget_pass">忘记密码?</string>
    <string name="user_id">用户名</string>
    <string name="user_password">密码</string>
    <string name="login">登录</string>
    <string name="no_id">没有账号？</string>
    <string name="confirm_pass">确认密码</string>
    <string name="register">注册</string>

    <string name="horizontal_timeline">Horizontal Timeline</string>
    <string name="vertical_timeline">Vertical Timeline</string>
    <string name="horizontal_timeline_w_padding">Horizontal Timeline With Line Padding</string>
    <string name="vertical_timeline_w_padding">Vertical Timeline With Line Padding</string>
</resources>
