<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_user_id_til"
            style="@style/CustomColorTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText

                android:id="@+id/login_user_id_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_id"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_pass_once_til"
            style="@style/CustomColorTextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/login_pass_once_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_password"
                android:inputType="textPassword"
               />
        </android.support.design.widget.TextInputLayout>


        <RelativeLayout
            android:id="@+id/r2"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/reme_pass_ckb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp"
                android:hint="@string/remember_pass" />

            <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_alignParentRight="true"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:text="@string/forget_pass"-->
            <!--android:layout_centerVertical="true"-->
            <!--/>-->
        </RelativeLayout>

        <TextView

            android:id="@+id/no_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:text="@string/no_id"
            android:textColor="#b9b9b9" />

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true">

            <!--<com.bcoder.signindemo.view.button.CircleButton-->
                <!--android:id="@+id/button_test"-->
                <!--android:layout_width="220dp"-->
                <!--android:layout_height="50dp"-->
                <!--android:layout_alignParentBottom="true"-->
                <!--android:layout_centerHorizontal="true"-->
                <!--android:layout_marginBottom="100dp"-->
                <!--android:text="登陆"-->
                <!--android:textColor="#fff" />-->

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>